# prelight

./: .gitignore  LICENSE  MIGRATION_NOTES.md  README.md  config.yaml  pyproject.toml  setup.sh
context/: orders.md
migrations/: 2026-04-02-164711-orders-increase-amount-50-for-odd-customer-id-o.sql  2026-04-02-165301-orders-add-region-column-to-orders-set-all-rows.sql  2026-04-03-000550-orders.sql  2026-04-04-175628-orders.sql  2026-04-06-121941-orders.sql
prelight/: server.py
prelight/cli/: configure.py  install.py  setup_demo.py
prelight/config/: settings.py
prelight/core/: context_generator.py  github_client.py  production_guard.py  quality_checks.py  sandbox_manager.py  sql_utils.py
prelight/core/clients/: __init__.py  databricks_client.py  duckdb_client.py
quality_checks/categorical/: distribution_shift.sql  value_set_drift.sql
quality_checks/integrity/: foreign_key_integrity.sql  referential_completeness.sql  uniqueness_on_keys.sql
quality_checks/numeric/: mean_drift.sql  min_max_bounds.sql  sum_comparison.sql
quality_checks/runs/sbx_orders_20260402_1641/: amount_mean_drift.sql  amount_sum_comparison.sql  row_count_comparison.sql
quality_checks/runs/sbx_orders_20260402_1651/: region_all_emea.sql  (+1 more)
quality_checks/volume/: new_rows_inspection.sql  row_count_comparison.sql
setup/databricks/: demo_data.sql
setup/duckdb/: demo_data.sql  init_local.py
tests/: conftest.py  test_context_generator.py  test_duckdb_client.py  test_production_guard.py  test_quality_checks.py  test_sandbox_manager.py  test_settings.py  test_sql_utils.py
(+9 files in other folders)
